--- a/backend/views/layouts/layout.handlebars
+++ b/backend/views/layouts/layout.handlebars
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Sola Dosis</title>
+    <title>LQ Systems</title>
 	<link rel="stylesheet" href="/jspanel-4.3.0/jspanel.min.css">
     <link rel="stylesheet" href="/css/bootstrap.css">
     <link rel="stylesheet" href="/css/bootstrap-switch.css">
@@ -28,10 +28,12 @@
             {{/if}}
           </ul>
         </nav>
-        <a href="http://soladosis.wixsite.com/mysite">
+        <a href="http://lq-systems.com/">
 
 
-          <img src="/img/dosisgold6.png" style="height:42px">
+          <!-- <img src="/img/sola.systemsLogo.gif" style="height:60px"> -->
+          <img src="/img/lqSystems.gif" style="height:60px">
+
 
 
           <!-- <h2 class="text-muted" style="font-family: pacifica">Sola Dosis</h2> -->
