--- a/frontend/src/styles/icons/style.css
+++ b/frontend/src/styles/icons/style.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'icomoon';
-  src:  url('fonts/icomoon.eot?skp9yl');
-  src:  url('fonts/icomoon.eot?skp9yl#iefix') format('embedded-opentype'),
-    url('fonts/icomoon.ttf?skp9yl') format('truetype'),
-    url('fonts/icomoon.woff?skp9yl') format('woff'),
-    url('fonts/icomoon.svg?skp9yl#icomoon') format('svg');
+  src:  url('fonts/icomoon.eot?963uij');
+  src:  url('fonts/icomoon.eot?963uij#iefix') format('embedded-opentype'),
+    url('fonts/icomoon.ttf?963uij') format('truetype'),
+    url('fonts/icomoon.woff?963uij') format('woff'),
+    url('fonts/icomoon.svg?963uij#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -24,17 +24,23 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-.icon-reactor:before {
-  content: "\e903";
-}
-.icon-air:before {
-  content: "\e902";
+.icon-pump:before {
+  content: "\e904";
 }
 .icon-power:before {
   content: "\e901";
 }
 .icon-heat:before {
   content: "\e9a9";
+}
+.icon-logout:before {
+  content: "\ea14";
+}
+.icon-reactor:before {
+  content: "\e903";
+}
+.icon-air:before {
+  content: "\e902";
 }
 .icon-logout:before {
   content: "\ea14";
