add reactor card to reactor index view

--- a/frontend/src/styles/variables.scss
+++ b/frontend/src/styles/variables.scss
@@ -10,5 +10,7 @@ $grey-800: #424242;
 $grey-900: #212121;
 
 $vue-green: #4fc08d;
+$dark-navy: #1e1e2f;
 
 $color-primary: $vue-green;
+$color-panel-background: $dark-navy; 
