replaces sidebar icons and removes sidebar background

--- a/frontend/src/styles/variables.scss
+++ b/frontend/src/styles/variables.scss
@@ -12,5 +12,6 @@ $grey-900: #212121;
 $vue-green: #4fc08d;
 $dark-navy: #1e1e2f;
 
-$color-primary: $vue-green;
-$color-panel-background: $dark-navy; 
+$primary-color: $vue-green;
+$panel-background-color: $dark-navy; 
+$panel-background-opacity: .9;
