--- a/frontend/src/styles/icons/style.css
+++ b/frontend/src/styles/icons/style.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'icomoon';
-  src:  url('fonts/icomoon.eot?ap21rl');
-  src:  url('fonts/icomoon.eot?ap21rl#iefix') format('embedded-opentype'),
-    url('fonts/icomoon.ttf?ap21rl') format('truetype'),
-    url('fonts/icomoon.woff?ap21rl') format('woff'),
-    url('fonts/icomoon.svg?ap21rl#icomoon') format('svg');
+  src:  url('fonts/icomoon.eot?k9s9d6');
+  src:  url('fonts/icomoon.eot?k9s9d6#iefix') format('embedded-opentype'),
+    url('fonts/icomoon.ttf?k9s9d6') format('truetype'),
+    url('fonts/icomoon.woff?k9s9d6') format('woff'),
+    url('fonts/icomoon.svg?k9s9d6#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -24,27 +24,24 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-.icon-back:before {
-  content: "\e905";
+.icon-air:before {
+  content: "\e900";
 }
-.icon-pump:before {
-  content: "\e904";
-}
-.icon-power:before {
+.icon-fire:before {
   content: "\e901";
 }
-.icon-heat:before {
-  content: "\e9a9";
+.icon-sun:before {
+  content: "\e902";
 }
-.icon-logout:before {
-  content: "\ea14";
+.icon-water:before {
+  content: "\e904";
 }
 .icon-reactor:before {
   content: "\e903";
 }
-.icon-air:before {
-  content: "\e902";
+.icon-back:before {
+  content: "\e905";
 }
-.icon-light:before {
-  content: "\e900";
+.icon-logout:before {
+  content: "\ea14";
 }
