replaces vuetify switch with custom html/css

--- a/frontend/src/styles/variables.scss
+++ b/frontend/src/styles/variables.scss
@@ -13,6 +13,7 @@ $vue-green: #4fc08d;
 $dark-navy: #1A203F;
 $indigo: #344cbd;
 $red: #D52E2B;
+$red-faded: #922e2d;
 $primary-color: $vue-green;
 
 // components
