restyles login screen with dark theme and LQ logo

--- a/frontend/src/styles/variables.scss
+++ b/frontend/src/styles/variables.scss
@@ -28,6 +28,7 @@ $yellow-transparent: rgba(234, 234, 75, .6);
 
 
 // theme colors
+$accent-color-high-contrast: $green-vue;
 $font-color-medium-contrast: $grey-300;
 
 // components
