--- a/frontend/src/styles/icons/style.css
+++ b/frontend/src/styles/icons/style.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'icomoon';
-  src:  url('fonts/icomoon.eot?k9s9d6');
-  src:  url('fonts/icomoon.eot?k9s9d6#iefix') format('embedded-opentype'),
-    url('fonts/icomoon.ttf?k9s9d6') format('truetype'),
-    url('fonts/icomoon.woff?k9s9d6') format('woff'),
-    url('fonts/icomoon.svg?k9s9d6#icomoon') format('svg');
+  src:  url('fonts/icomoon.eot?xd00n1');
+  src:  url('fonts/icomoon.eot?xd00n1#iefix') format('embedded-opentype'),
+    url('fonts/icomoon.ttf?xd00n1') format('truetype'),
+    url('fonts/icomoon.woff?xd00n1') format('woff'),
+    url('fonts/icomoon.svg?xd00n1#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -24,6 +24,9 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+.icon-dots:before {
+  content: "\e906";
+}
 .icon-air:before {
   content: "\e900";
 }
