--- a/frontend/src/styles/icons/demo-files/demo.css
+++ b/frontend/src/styles/icons/demo-files/demo.css
@@ -150,9 +150,12 @@ p {
   font-size: 32px;
 }
 .fs2 {
-  font-size: 24px;
+  font-size: 20px;
 }
 .fs3 {
+  font-size: 24px;
+}
+.fs4 {
   font-size: 32px;
 }
 
