--- a/frontend/src/styles/icons/style.css
+++ b/frontend/src/styles/icons/style.css
@@ -1,12 +1,13 @@
 @font-face {
   font-family: 'icomoon';
-  src:  url('fonts/icomoon.eot?9i2e2a');
-  src:  url('fonts/icomoon.eot?9i2e2a#iefix') format('embedded-opentype'),
-    url('fonts/icomoon.ttf?9i2e2a') format('truetype'),
-    url('fonts/icomoon.woff?9i2e2a') format('woff'),
-    url('fonts/icomoon.svg?9i2e2a#icomoon') format('svg');
+  src:  url('fonts/icomoon.eot?x7f10s');
+  src:  url('fonts/icomoon.eot?x7f10s#iefix') format('embedded-opentype'),
+    url('fonts/icomoon.ttf?x7f10s') format('truetype'),
+    url('fonts/icomoon.woff?x7f10s') format('woff'),
+    url('fonts/icomoon.svg?x7f10s#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
+  font-display: block;
 }
 
 [class^="icon-"], [class*=" icon-"] {
@@ -24,6 +25,15 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+.icon-chart-bar:before {
+  content: "\e908";
+}
+.icon-bar-graph:before {
+  content: "\e909";
+}
+.icon-dots:before {
+  content: "\e906";
+}
 .icon-dna:before {
   content: "\e907";
 }
@@ -41,9 +51,6 @@
 }
 .icon-reactor:before {
   content: "\e903";
-}
-.icon-dots:before {
-  content: "\e906";
 }
 .icon-back:before {
   content: "\e905";
